--- a/register.html
+++ b/register.html
@@ -1,6 +1,6 @@
 <html>
 	<title>Sign Up</title>
-<body bgcolor="lightblue"  >
+<body bgcolor="108b9e">
 	<h2><center> SIGN UP</center></h2>
     <div align="center" >
         <form action="signin.php" method="POST">
