--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <html>
 	<title>Sign in</title>
 	<h2><center> SIGN IN</center></h2>
-		<body bgcolor="lightblue"  >
+		<body bgcolor="108b9e">
     		<div align="center" >
         		<form action="login.php" method="post">
 					USER NAME: <input type="text" name="username"><br><br>
